syntax = "proto3";

package containerd.v1;

import "google/protobuf/empty.proto";
import "gogoproto/gogo.proto";

service Version {
	rpc Version(google.protobuf.Empty) returns (VersionResponse);
}

message VersionResponse {
	string version = 1;
	string revision = 2;
}
